--- a/wizards/WizardsWeb/Views/Combat/_FinishMatchModals.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/_FinishMatchModals.cshtml
@@ -7,15 +7,20 @@
     if (Model.Status == StageStatus.ConcludedEnemyWins)
     {
         victoryOrDeath = "failed";
+        <script>
+            document.getElementById("fanfare-lost").play();
+            document.getElementById("battle-music").pause();
+        </script>
     }
     if (Model.Status == StageStatus.ConcludedHeroWins)
     {
         victoryOrDeath = "victory";
+        <script>
+            document.getElementById("fanfare-win").play();
+            document.getElementById("battle-music").pause();
+        </script>
     }
 
-    <audio id="Famfare" autoplay="true">
-        <source src="Sound/Match-@(victoryOrDeath).mp3">
-    </audio>
     <div class="concluded-match-container">
         <img class="match-result static-image-not-dragable" src="GraphicAssets/BattleGui/Conclude-@(victoryOrDeath).png" width="100%" height="100%"/>
         
@@ -45,11 +50,4 @@
             </div>
         }
     </div>
-
-    <script>
-        function audioVolume() {
-            document.getElementById("Famfare").volume = 0.25;
-        }
-        window.onload = audioVolume;
-    </script>
 }
