Add Volume Controller; Replace audio files with mixed and leveled up audio volume;

--- a/wizards/WizardsWeb/Views/Exploration/TitanRaids.cshtml
+++ b/wizards/WizardsWeb/Views/Exploration/TitanRaids.cshtml
@@ -78,9 +78,8 @@
 </script>
 
 <script>
-    function audioVolume() {
-        document.getElementById("Titan-Raids-Music").volume = 0.08;
+    function lobbyMusicStart() {
         document.getElementById("Titan-Raids-Music").play();
     }
-    window.onload = audioVolume;
+    window.onload = setTimeout(lobbyMusicStart, 10);
 </script>
