--- a/wizards/WizardsWeb/Views/Combat/CombatStage.cshtml
+++ b/wizards/WizardsWeb/Views/Combat/CombatStage.cshtml
@@ -1,8 +1,10 @@
-﻿@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
+﻿@using Wizards.Core.Model.WorldModels.Enums
+@model WizardsWeb.ModelViews.CombatModelViews.CombatStageModelView
 
 <body class="bg-arena not-selectable"
       style="background-image: url(/GraphicAssets/ArenaBackground/StageBackground-@(Model.BackgroundImageNumber).jpg);">
-    <audio id="battle-music" loop="true" autoplay="true">
+
+    <audio id="battle-music" loop="true">
         <source src="Sound/Titan-battle.mp3">
     </audio>
     <audio id="fanfare-win">
@@ -11,23 +13,32 @@
     <audio id="fanfare-lost">
         <source src="Sound/Match-failed.mp3">
     </audio>
-
+    <div style="width: 100%; height: 60px; bottom: 0px; position: absolute;" class="bg-brown text-golden-dark">
+        <div class="row p-0 m-0">
+            <div class="col-10 p-0 m-0"></div>
+            <div class="col-2 p-0 m-0 pt-3">
+                <partial name="_MusicVolumeSettings" />
+            </div>
+        </div>
+    </div>
+    
+    @if (Model.Status == StageStatus.DuringCombat)
+    {
+        <script>
+            function musicStart() {
+                document.getElementById("battle-music").play();
+            }
+            window.onload = setTimeout(musicStart, 100);
+        </script>
+    }
 
     <div id="content-container" class="col-12 p-4">
         <partial name="_CombatContent" model="@Model" />
     </div>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous">
-</script>
-
-<script>
-    function combatMusicVolume() {
-        document.getElementById("battle-music").volume = 0.10;
-        document.getElementById("fanfare-win").volume = 0.25;
-        document.getElementById("fanfare-lost").volume = 0.25;
-    }
-    window.onload = combatMusicVolume;
 </script>
