--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 @{
     string controller = ViewContext.RouteData.Values["Controller"]?.ToString();
     var notSelectable = "";
-    if (controller!="Home")
+    if (controller != "Home")
     {
         notSelectable = "select-blocked";
     }
@@ -23,10 +23,10 @@
 <body class="bg-leather @notSelectable">
     <div class="cover-container d-flex w-100 h-100 mx-auto bg-brown flex-column">
         <header>
-            <nav class="navbar navbar-expand-sm navbar-light bg-brown text-white box-shadow">
+            <nav class="navbar navbar-expand-sm navbar-light bg-brown text-white box-shadow" style="position:static; top: 0px;">
                 <div class="container">
 
-                    <img src="~/Images/logo.png" class="static-image-not-dragable" alt="Site Logo" style="height:75px; width: auto" />
+                    <img src="~/Images/logo.png" class="static-image-not-dragable" alt="Site Logo" style="height:60px; width: auto" />
 
 
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -67,10 +67,19 @@
 
         </div>
 
-        <footer class="footer mt-auto text-golden-dark bg-brown box-shadow">
-            <div style='text-align:center'>
-                &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 2.0
+        <footer class="footer text-golden-dark bg-brown box-shadow" style="width: 100%; height: 60px; position:fixed; bottom: 0px;">
+            <div class="row m-0 p-0">
+                <div class="col-2 m-0 p-0">
+                    
+                </div>
+                <div class="col-8 m-0 p-0" style='text-align: center'>
+                    &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 2.0
+                </div>
+                <div class="col-2 m-0 p-0">
+                    <partial name="_MusicVolumeSettings"/>
+                </div>
             </div>
+
         </footer>
 
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
