--- a/wizards/WizardsWeb/Views/Home/Error404.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Error404.cshtml
@@ -1,8 +1,6 @@
 @{
     ViewData["Title"] = "404 - Not found";
 }
-
-<div class="text-center">
-    <h1 class="display-4">404 - Page not found</h1>
-    <iframe src="https://www.youtube.com/embed/fQHEBL9Izn0" width="560" height="315" title="A YouTube video" frameborder="0" allowfullscreen></iframe>
+<div style="width: 100%; height: 100%; padding: 0px; margin: 0px;">
+    <img class="static-image-not-dragable" src="~/images/404NotFoundGraphic.jpg" height="100%" width="100%"/>
 </div>
