--- a/wizards/WizardsWeb/Views/Home/Error500.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Error500.cshtml
@@ -1,8 +1,6 @@
 @{
     ViewData["Title"] = "500 - internal server error";
 }
-
-<div class="text-center">
-    <h1 class="display-4">500 - internal server error</h1>
-    <img src="~/images/500.jpg"/>
+<div style="width: 100%; height: 100%; padding: 0px; margin: 0px;">
+    <img class="static-image-not-dragable" src="~/images/500ErrorGraphic.jpg" height="100%" width="100%"/>
 </div>
