--- a/wizards/WizardsWeb/Views/Home/Error500.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Error500.cshtml
@@ -1,6 +1,19 @@
 @{
     ViewData["Title"] = "500 - internal server error";
 }
-<div style="width: 100%; height: 100%; padding: 0px; margin: 0px;">
-    <img class="static-image-not-dragable" src="~/images/500ErrorGraphic.jpg" height="100%" width="100%"/>
-</div>
+
+<style>
+    .error-500-card {
+        background-image: url("/Images/500ErrorGraphic.jpg");
+        background-repeat: no-repeat;
+        background-attachment: inherit;
+        background-size: 80% auto;
+        background-position: center top;
+
+        display: block;
+        width: 100%;
+        height: 800px;
+    }
+</style>
+
+<div class="error-500-card"></div>
