--- a/wizards/WizardsWeb/Views/Home/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Home/Index.cshtml
@@ -2,24 +2,28 @@
     ViewData["Title"] = "Wizards Home";
 }
 
-<head>
-    <style>
-        .welcome-card {
-            background-image: url("/Images/Tapeta-3.jpg");
-            background-repeat: no-repeat;
-            background-attachment: inherit;
-            background-size:contain;
-            width: 100%;
-            height: 750px;
-        }
-    </style>
-</head>
-<div class="welcome-card col-12">
-    <div class="text-center">
-        <br /><br />
-        <h1 class="font-weight-bolder">Welcome Adventurer!</h1>
+<style>
+    .welcome-card {
+        background-image: url("/Images/Tapeta-3.jpg");
+        background-repeat: no-repeat;
+        background-attachment: inherit;
+        background-size: 100% 120%;
+        background-position-y: -80px;
+        width: 100%;
+        height: 800px;
+    }
+</style>
+
+<div class="welcome-card col-12 select-blocked">
+    <div class="text-center" style="filter: drop-shadow(0px 0px 2px white) contrast(125%)">
         <br />
-        <h3 class="font-weight-bolder">Do you want to become Wizard?</h3>
+        <h1 class="font-weight-bolder" style="font-size: 65px">Welcome Adventurer!</h1>
         <br />
+        <h3 class="font-weight-bolder" style="font-size: 43px">Do you want to become Wizard?</h3>
+        <br /><br /><br /><br />
+        <h4 class="font-weight-bolder" style="font-size: 30px">
+            <a style="color: #0048aa" asp-controller="Player" asp-action="Create">Create new account</a> to begin or <br/>
+            <a style="color: #0048aa" asp-controller="Player" asp-action="Login">Login</a> to continue your journey!
+        </h4>
     </div>
 </div>
