--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -28,12 +28,13 @@
 
                     <img src="~/Images/logo.png" class="static-image-not-dragable" alt="Site Logo" style="height:60px; width: auto" />
 
-
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+                    
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        
                         <ul class="navbar-nav flex-grow-1 ">
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-controller="Home" asp-action="Index">Home</a>
@@ -58,13 +59,20 @@
                 </div>
             </nav>
         </header>
-
-        <div class="container-fluid bg-leather d-flex w-100 h-100 p-3 mx-auto flex-column">
-
-            <div class="container">
+        @{
+            var containerFluid = "";
+            var paddings = "p-3";
+            
+            if (controller == "Home")
+            {
+                containerFluid = "-fluid";
+                paddings = "p-0";
+            }
+        }
+        <div class="container-fluid bg-leather d-flex w-100 h-100 @(paddings) mx-auto flex-column">
+            <div class="container@(containerFluid) p-0">
                 @RenderBody()
             </div>
-
         </div>
 
         <footer class="footer text-golden-dark bg-brown box-shadow" style="width: 100%; height: 60px; position:fixed; bottom: 0px;">
@@ -79,7 +87,6 @@
                     <partial name="_MusicVolumeSettings"/>
                 </div>
             </div>
-
         </footer>
 
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
