--- a/wizards/WizardsWeb/Views/Inventory/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Inventory/Index.cshtml
@@ -18,6 +18,7 @@
                 <div class="btn-group btn-block">
                     <a class="gbtn gbtn-action" asp-controller="Hero" asp-action="Details">Back to Hero</a>
                     <a class="gbtn gbtn-action" asp-controller="Merchant" asp-action="Index">Go to Merchant</a>
+                    <a class="gbtn gbtn-action" asp-controller="Exploration" asp-action="Index">Exploration center</a>
                 </div>
             </li>
         </ul>
