--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using WizardsWeb.Extensions
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,7 +65,11 @@
             <div class="container">
                 @RenderBody()
             </div>
-
+            
+            @if (User.HasPlayerMatchOpened())
+            {
+                <partial name="_MatchOpenedModal"/>
+            }
         </div>
 
         <footer class="footer mt-auto text-golden-dark bg-brown box-shadow">
