--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -80,11 +80,11 @@
             }
         </div>
 
-        <footer class="footer text-golden-dark bg-brown box-shadow" style="width: 100%; height: 60px; position:fixed; bottom: 0px;">
-            <div class="row m-0 p-0">
+        <footer style="width: 100%; height: 40px; bottom: 0px; position: fixed;" class="bg-brown text-golden-dark p-0">
+            <div class="row m-0 p-0 pt-2">
                 <div class="col-2 m-0 p-0"></div>
                 <div class="col-8 m-0 p-0" style='text-align: center'>
-                    &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 2.0
+                    &copy; 2022 - WizardsWeb - <a href="https://github.com/infoshareacademy/jcszr6-wizards.git" target="_blank"> GIT Repository</a> Ver. 3.0
                 </div>
                 <div class="col-2 m-0 p-0">
                     <partial name="_MusicVolumeSettings"/>
