--- a/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
+++ b/wizards/WizardsWeb/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     }
 }
 
-<body class="bg-leather @notSelectable">
+<body class="bg-leather @notSelectable" style="margin-bottom: 40px; zoom: 95%">
     <div class="cover-container d-flex w-100 h-100 mx-auto bg-brown flex-column">
         <header>
             <nav class="navbar navbar-expand-sm navbar-light bg-brown text-white box-shadow" style="position:static; top: 0px;">
@@ -47,7 +47,7 @@
                                 <a class="nav-link text-secondary disabled" asp-controller="Home" asp-action="AboutGame">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-secondary disabled" asp-controller="Home" asp-action="Authors">Authors</a>
+                                <a class="nav-link text-white" asp-controller="Home" asp-action="Authors">Authors</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-controller="Search" asp-action="Index">Ranking</a>
@@ -70,7 +70,7 @@
                 paddings = "p-0";
             }
         }
-        <div class="container-fluid bg-leather d-flex w-100 h-100 @(paddings) mx-auto flex-column">
+        <div class="container-fluid bg-leather d-flex w-100 h-100 @(paddings) mx-auto flex-column p-0">
             <div class="container@(containerFluid) p-0">
                 @RenderBody()
             </div>
@@ -80,7 +80,7 @@
             }
         </div>
 
-        <footer style="width: 100%; height: 40px; bottom: 0px; position: fixed;" class="bg-brown text-golden-dark p-0">
+        <footer style="width: 100%; height: 40px; bottom: 0px; position: fixed;" class="bg-brown text-golden-dark p-0 m-0">
             <div class="row m-0 p-0 pt-2">
                 <div class="col-2 m-0 p-0"></div>
                 <div class="col-8 m-0 p-0" style='text-align: center'>
